Wire up tag functionality to the new_word function

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
         <div class="row featured-words">
             <div class="col s12 m6">
                 <div class="card green darken-1">
-                    <div class="card-content white-text">
+                    <div class="card-content word-summary white-text">
                         <span class="card-title"><strong>{{ words[1].name.capitalize() }}</strong></span>
                         <p>{{ words[1].meaning }}</p>
                     </div>
@@ -64,7 +64,7 @@
             <div class="row featured-words">
                 <div class="col s12 m6">
                     <div class="card green darken-1">
-                        <div class="card-content white-text">
+                        <div class="card-content word-summary white-text">
                             <span class="card-title"><strong>{{ words[2].name.capitalize() }}</strong></span>
                             <p>{{ words[2].meaning }}</p>
                         </div>
@@ -76,7 +76,7 @@
                 <div class="row featured-words">
                     <div class="col s12 m6">
                         <div class="card green darken-1">
-                            <div class="card-content white-text">
+                            <div class="card-content word-summary white-text">
                                 <span class="card-title"><strong>{{ words[3].name.capitalize() }}</strong></span>
                                 <p>{{ words[3].meaning }}</p>
                             </div>
