Import & restyle tags for word_page.html

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -79,6 +79,12 @@
                         <div class="col s12">
                             <h6><strong>Tags:</strong></h6>
                         </div>
+                        <div class="col tags-container post">
+                            <ul class="tags">
+                                <li><a href="#">tag</a></li>
+                                <li><a href="#">tag name</a></li>
+                            </ul>
+                        </div>
                     {% else %}
 
                     {% endif %}
