--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,7 +197,7 @@ main {
 }
 
 .sort-icons {
-    margin-right: 18px!important;
+    margin-right: 18px !important;
 }
 
 .word-summary {
@@ -206,11 +206,113 @@ main {
 
 @media(min-width: 601px) {
     .word-summary p {
-    max-height: 44px;
-    overflow-y: hidden;
+        max-height: 44px;
+        overflow-y: hidden;
     }
 }
 
 .add-tag-form-container {
     margin-top: 60px;
+}
+
+/* Some of the following css was taken from this website: https://codepen.io/lukezhang/pen/JlImc
+   However, it has been edited to meet the needs and styling of the Yurt Index website.  */
+/* Pure CSS Post Tags */
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .1s linear 0;
+    -moz-transition: all .1s linear 0;
+    transition: all .1s linear 0;
+
+}
+
+.post {
+    position: relative;
+    padding: 10px 20px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 5px;
+    width: auto;
+    text-align: center;
+}
+
+.tags-container {
+    float: none !important;
+}
+
+.tags {
+    margin: 0;
+    padding: 0;
+    right: 24px;
+    bottom: -14px;
+    list-style: none;
+}
+
+.tags li {
+    margin-right: 17px;
+    margin-top: 5px;
+}
+
+.tags li,
+.tags a {
+    float: left;
+    height: 26px;
+    line-height: 24px;
+    position: relative;
+    font-size: 14px;
+    background-color: white;
+}
+
+.tags a {
+    margin-left: 20px;
+    padding: 0 10px 0 12px;
+    background: #0089e0;
+    color: #fff;
+    text-decoration: none;
+    -moz-border-radius-bottomright: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.tags a:before {
+    content: "";
+    float: left;
+    position: absolute;
+    top: 0;
+    left: -12px;
+    width: 0;
+    height: 0;
+    border-color: transparent #0089e0 transparent transparent;
+    border-style: solid;
+    border-width: 12px 12px 14px 0;
+}
+
+.tags a:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 0;
+    float: left;
+    width: 4px;
+    height: 4px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: #fff;
+    -moz-box-shadow: -1px -1px 2px #004977;
+    -webkit-box-shadow: -1px -1px 2px #004977;
+    box-shadow: -1px -1px 2px #004977;
+}
+
+.tags a:hover {
+    background: #555;
+}
+
+.tags a:hover:before {
+    border-color: transparent #555 transparent transparent;
 }
