Fix type on word_page.html

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -82,7 +82,7 @@
                         <div class="col tags-container post">
                             <ul class="tags">
                                 {% for tag in tags %}
-                                 display functi0ona<li><a href="#">{{ tag.name }}</a></li>
+                                    <li><a href="#">{{ tag.name }}</a></li>
                                 {% endfor %}
                                 
                             </ul>
