Add tags dropdown to edit_word.html

--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -132,6 +132,9 @@
                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Done</a>
                 </div>
             </div>
+
+            <!-- tags -->
+            
             <div class="input-field col s12 m8 l6">
                 <select id="tag_1" name="tag_1">
                     <option value="" disabled selected>Add a tag</option>
