--- a/templates/register.html
+++ b/templates/register.html
@@ -39,8 +39,8 @@
                     <span class="form-instruction">Enter Your Date of Birth:</span>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">date_range</i>                  
-                        <input id="date_of_birth" name="date_of_birth" type="text" class="datepicker" required>
-                        <label for="date_of_birth">Date of Birth</label>                     
+                        <input id="date_of_birth" name="date_of_birth" type="text" value="01-Jan-75" class="datepicker" required>
+                        <label for="date_of_birth">Date of Birth</label>                    
                     </div>
                 </div>
                 <!-- password -->
