--- a/templates/profile.html
+++ b/templates/profile.html
@@ -70,6 +70,9 @@
                 <div class="row">
                     <div class="col s9">
                         <div class="card green darken-1">
+                            {% if word.rating > 6 %}
+                                <span><i class="right star-word-icon material-icons">star</i></span>
+                            {% endif %}
                             <div class="card-content white-text">
                                 <span class="card-title"><strong>{{ word.name }}</strong></span>
                                 <p>{{ word.meaning }}</p>
@@ -89,6 +92,9 @@
                 <div class="row">
                     <div class="col right s9">
                         <div class="card green darken-1">
+                            {% if word.rating > 6 %}
+                                <span><i class="right star-word-icon material-icons">star</i></span>
+                            {% endif %}
                             <div class="card-content white-text">
                                 <span class="card-title"><strong>{{ word.name }}</strong></span>
                                 <p>{{ word.meaning }}</p>
