Add & wire up 500 error page

--- a/templates/500.html
+++ b/templates/500.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div>
-    <h3 class="center main-heading error-text-emote">¯\_(ツ)_/¯</h3>
-    <h3 class="center main-heading">Sorry, this page doesn't exist</h3>
+    <h3 class="center main-heading error-text-emote">(ง ͠° ͟ل͜ ͡°)ง</h3>
+    <h3 class="center main-heading">Oops, something's gone wrong.</h3>
 </div>
 
 <div class="center return-home-button-container">
