--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,18 @@
         <div class="col s12 m6 user-buttons">
             <a href="{{ url_for('edit_profile', username=user.name) }}" class="btn-large deep-purple lighten-1">Edit Your
                 Profile</a>
-            <a href="#" class="btn-large red text-white">Delete Your Profile</a>
+            <!-- modal trigger -->
+            <a class="btn-large red modal-trigger" href="#userDeleteConfirm">Delete</a>
+
+            <!-- modal structure -->
+            <div id="userDeleteConfirm" class="modal">
+                <div class="modal-content">
+                    <h5>Are you sure you want to delete your profile?</h5>
+                    <p>This action cannot be undone...</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="#!" class="btn red modal-close">Cancel</a>
+                    <a class="btn deep-purple lighten-1 modal-close" href="{{ url_for('delete_word', word_Id=word._id) }}">Delete me</a>
         </div>
     </div>
     <div class="row">
