Add delete user functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes">
-                        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+                        <h4 class="amber darken-1 center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
