--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
             <a href="{{ url_for('edit_profile', username=user.name) }}" class="btn-large deep-purple lighten-1">Edit Your
                 Profile</a>
             <!-- modal trigger -->
-            <a class="btn-large red modal-trigger" href="#userDeleteConfirm">Delete</a>
+            <a class="btn-large red modal-trigger" href="#userDeleteConfirm">Delete Your Profile</a>
 
             <!-- modal structure -->
             <div id="userDeleteConfirm" class="modal">
@@ -27,7 +27,9 @@
                 </div>
                 <div class="modal-footer">
                     <a href="#!" class="btn red modal-close">Cancel</a>
-                    <a class="btn deep-purple lighten-1 modal-close" href="{{ url_for('delete_word', word_Id=word._id) }}">Delete me</a>
+                    <a class="btn deep-purple lighten-1 modal-close" href="{{ url_for('delete_profile', user_id=user._id) }}">Delete me</a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
