--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,3 @@
-/* This code is for a sticky footer but I would like to avoid it.
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-
-  main {
-    flex: 1 0 auto;
-  } */
-
 .home-description p {
     text-align: center;
 }
@@ -78,6 +67,10 @@ main {
     color: #43a047;
     font-style: italic;
     font-weight: 700;
+}
+
+#date_of_birth {
+    opacity: .5;
 }
 
 .basic-user-info-container {
